Closed Bug 1545754 Opened 5 years ago Closed 5 years ago

Bustage on builds/worker/workspace/build/src/layout/style/StyleSheet.cpp when Gecko 68 merges to Beta on 2019-05-06

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed

People

(Reporter: noemi_erli, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Assignee: nobody → emilio
Flags: needinfo?(emilio)
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/autoland/rev/499a30850148
Always use a boolean variable to fix builds where diagnostic asserts are disabled. r=beta-bustage
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

No longer occurs on beta sims.

Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.