Bug 1545754 - Always use a boolean variable to fix builds where diagnostic asserts are disabled. r=beta-bustage